--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<me.jagar.mindmappingandroidlibrary.Views.MindMappingView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_gravity="center"
     android:gravity="center"
+    android:background="#C4B8B8"
+    android:id="@+id/mind_mapping_view"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <me.jagar.mindmappingandroidlibrary.Views.MindMappingView
-        android:id="@+id/mind_mapping_view"
-        android:background="#C4B8B8"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </me.jagar.mindmappingandroidlibrary.Views.MindMappingView>
-
-</LinearLayout>
+</me.jagar.mindmappingandroidlibrary.Views.MindMappingView>
