Adding zoom and scroll features & fixing save huge Mind Maps error

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<me.jagar.mindmappingandroidlibrary.Views.MindMappingView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<me.jagar.mindmappingandroidlibrary.Zoom.ZoomLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    tools:context=".MainActivity"
     android:layout_gravity="center"
     android:gravity="center"
-    android:background="#C4B8B8"
-    android:id="@+id/mind_mapping_view"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-</me.jagar.mindmappingandroidlibrary.Views.MindMappingView>
+    android:scrollbars="vertical|horizontal"
+    app:transformation="centerInside"
+    app:transformationGravity="auto"
+    app:alignment="center"
+    app:overScrollHorizontal="true"
+    app:overScrollVertical="true"
+    app:overPinchable="true"
+    app:horizontalPanEnabled="true"
+    app:verticalPanEnabled="true"
+    app:zoomEnabled="true"
+    app:flingEnabled="false"
+    app:scrollEnabled="true"
+    app:oneFingerScrollEnabled="false"
+    app:twoFingersScrollEnabled="true"
+    app:threeFingersScrollEnabled="true"
+    app:minZoom="0.7"
+    app:minZoomType="zoom"
+    app:maxZoom="2.5"
+    app:maxZoomType="zoom"
+    app:animationDuration="280"
+    app:hasClickableChildren="true">
+    <me.jagar.mindmappingandroidlibrary.Views.MindMappingView
+        android:layout_width="1000dp"
+        android:background="#C4B8B8"
+        android:id="@+id/mind_mapping_view"
+        android:layout_height="1000dp" />
+</me.jagar.mindmappingandroidlibrary.Zoom.ZoomLayout>
